--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,31 +4,33 @@
   <div class="wrapper">
 
     <div class="footer-col-wrapper">
-      <div class="footer-col one-half">
+      <div class="footer-col one-third">
       <!--<h2 class="footer-heading">{{ site.title | escape }}</h2>-->
         <ul class="contact-list">
-          <li class="p-name">
+          <!-- <li class="p-name">
             {%- if site.author -%}
               {{ site.author | escape }}
             {%- else -%}
               {{ site.title | escape }}
             {%- endif -%}
-            </li>
+            </li> -->
             {%- if site.email -%}
             <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
             {%- endif -%}
         </ul>
+        <div class="social-links">
+          {%- include social.html -%}
+        </div>
       </div>
 
-      <!--<div class="footer-col one-half">-->
-        <!--<p>{{- site.description | escape -}}</p>-->
-      <!--</div>-->
+      <div class="footer-col one-third">
+        <span>Last Update: Feb. 2021</span>
+      </div>
 
-      <div class="social-links">
-        {%- include social.html -%}
+      <div class="footer-col one-third">
+        <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=8aoNoTgxDcFPCO1557TTNfY29XiuTnsd0qMnMX78tMI&cl=ffffff&w=a"></script>
       </div>
     </div>
 
   </div>
-
 </footer>
