--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -23,13 +23,13 @@
         </div>
       </div>
 
-      <div class="footer-col one-third">
+      <!-- <div class="footer-col one-third">
         <span>Last Update: Feburary. 2022</span>
       </div>
 
       <div class="footer-col one-third">
         <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=8aoNoTgxDcFPCO1557TTNfY29XiuTnsd0qMnMX78tMI&cl=ffffff&w=a"></script>
-      </div>
+      </div> -->
     </div>
 
   </div>
