--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
       </div>
 
       <div class="footer-col one-third">
-        <span>Last Update: May 6, 2022</span>
+        <span>Last Update: Jan. 26, 2023</span>
       </div>
 
       <!-- <div class="footer-col one-third">
