--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
       </div>
 
       <div class="footer-col one-third">
-        <span>Last Update: Feb. 2, 2023</span>
+        <span>Last Update: July 28, 2023</span>
       </div>
 
       <!-- <div class="footer-col one-third">
