--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,9 +14,9 @@
               {{ site.title | escape }}
             {%- endif -%}
             </li> -->
-            {%- if site.email -%}
+            <!-- {%- if site.email -%}
             <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-            {%- endif -%}
+            {%- endif -%} -->
         </ul>
         <div class="social-links">
           {%- include social.html -%}
