--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="icon" type="image/x-icon" href="/favicon.png"/>
     </head>
     
 {%- include head.html -%}
