--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
       </div>
 
       <div class="footer-col one-third">
-        <span>Last Update: Dec. 21, 2023</span>
+        <span>Last Update: Oct. 2024</span>
       </div>
 
       <!-- <div class="footer-col one-third">
